...
                android:gravity="center_vertical|center_horizontal"
                android:text="Nome:"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="15"
                android:hint="Nome"
                android:inputType="textPersonName"
...
                android:gravity="center_vertical|center_horizontal"
                android:text="Sobrenome:"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/surnameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="15"
                android:hint="Sobrenome"
                android:inputType="textPersonName"
...
                android:gravity="center_vertical|center_horizontal"
                android:text="Telefone:"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.vicmikhailau.maskededittext.MaskedEditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="15"
                android:hint="Telefone"
                android:inputType="number"
...
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/finishUpdateData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="finishUpdateData"
                android:text="Alterar Dados"
                android:textColor="@android:color/background_light"
...
