...
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logoutProfessor">Sair</string>
    <string name="title_activity_menu_aluno">FindClass</string>
    <string name="action_logoutAluno">Sair</string>
    <string name="TOAST_STRING">Campos em branco não são permitidos.</string>
    <string name="WEAK_PASSWORD_TOAST">Senha fraca, senhas precisam de no mínimo 6 caracteres.</string>
    <string name="INVALID_EMAIL_TOAST">E-mail inválido.</string>
    <string name="TOAST_STRING_EMAIL_NAO_CADASTRADO">E-mail não cadastrado, realize cadastro</string>
    <string name="title_activity_subject_category_medio">Professores</string>
    <string name="title_activity_availability_list_aluno">Disponibilidade</string>
    <string name="about_info">
...
    <string name="title_activity_info_scedule_teacher">Informações</string>
    <string name="title_activity_professor_ranking">Melhores professores</string>
    <string name="title_activity_subject_of_professor">Disciplinas</string>
    <string name="title_activity_subjects_of_level">Disciplinas</string>
    <string name="title_activity_my_calendar_professor">Meu Calendário</string>
    <string name="title_activity_my_times">Meus Horários</string>
    <string name="INVALID_PHONE_TOAST">Telefone inválido!</string>

    <string-array name="day_arrays">
        <item>dom</item>
        <item>seg</item>
        <item>ter</item>
        <item>qua</item>
...
